# referral_phone_service

./: README.md  compose.yaml
backend/: .env.sample  Dockerfile  pyproject.toml
backend/conf/: settings.py  urls.py
backend/users/: auth_backends.py  models.py  serializers.py  services.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  0002_alter_user_invited_by.py
nginx/: default.conf
